--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 click==8.1.3
 Flask==2.2.3
 Flask-Login==0.6.2
+Flask-WTF==1.1.1
 greenlet==2.0.2
 importlib-metadata==6.1.0
 itsdangerous==2.1.2
@@ -9,4 +10,5 @@ MarkupSafe==2.1.2
 SQLAlchemy==2.0.7
 typing_extensions==4.5.0
 Werkzeug==2.2.3
+WTForms==3.0.1
 zipp==3.15.0
